# enhanced-automatic-shifted-log

./: LICENSE  README.md  pyproject.toml  setup.py
src/EASLT/: EASLT.py  __init__.py
src/EASLT.egg-info/: PKG-INFO  SOURCES.txt
